Make tech stack icons wrap on smaller screens for responsiveness

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <section class="about" data-aos="fade-up" data-aos-delay="1000">
     <h2>About Me</h2>
-    <p>I specialize in automating cloud infrastructure with DevOps tools like Docker, GitHub Actions, Kubernetes, and Azure. I enjoy building scalable CI/CD pipelines and secure cloud-native apps.</p>
+    <p>I specialize in automating cloud infrastructure with DevOps tools like Docker, GitHub Actions, Kubernetes. I enjoy building scalable CI/CD pipelines and secure cloud-native apps.</p>
   </section>
 
   <section class="tech-stack" data-aos="fade-up" data-aos-delay="1200">
