--- a/index.html
+++ b/index.html
@@ -14,13 +14,29 @@
 </head>
 <body>
   <header>
-    <nav>
-      <h1>Portfolio</h1>
-      <div class="theme-toggle">
-        <button id="theme-btn">🌙</button>
+  <nav>
+    <h1>Harshad</h1>
+
+    <!-- Desktop Navigation -->
+    <ul class="nav-links">
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#tech-stack">Tech Stack</a></li>
+      <li><a href="#projects">Projects</a></li>
+    </ul>
+
+    <!-- Mobile Menu Toggle -->
+    <div class="mobile-menu">
+      <input type="checkbox" id="menu-toggle" />
+      <label for="menu-toggle" class="menu-icon">&#9776;</label>
+      <div class="dropdown">
+        <a href="#about">About Me</a>
+        <a href="#tech-stack">Tech Stack</a>
+        <a href="#projects">Projects</a>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
+
 
   <section class="hero" data-aos="fade-up">
     <img src="assets/harshad.jpg" alt="Harshad Profile" class="profile-img" data-aos="zoom-in" data-aos-delay="200" />
@@ -72,5 +88,24 @@
   </script>
 
   <script src="script.js"></script>
+  <script>
+  let lastScrollTop = 0;
+  const header = document.querySelector("header");
+
+  window.addEventListener("scroll", () => {
+    let currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+
+    if (currentScroll > lastScrollTop) {
+      // Scrolling down
+      header.style.transform = "translateY(-100%)";
+    } else {
+      // Scrolling up
+      header.style.transform = "translateY(0)";
+    }
+
+    lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
+  });
+</script>
+
 </body>
 </html>
