--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
   <nav>
-    <h1>Harshad</h1>
+    <h1>Portfolio</h1>
 
     <!-- Desktop Navigation -->
     <ul class="nav-links">
@@ -48,7 +48,7 @@
 
   <section class="about" data-aos="fade-up" data-aos-delay="1000">
     <h2>About Me</h2>
-    <p>I specialize in automating cloud infrastructure with DevOps tools like Docker, GitHub Actions, Kubernetes. I enjoy building scalable CI/CD pipelines and secure cloud-native apps.</p>
+    <p>I’m a motivated and hardworking individual who thrives on learning and growth. With a passion for building and problem-solving, I’ve  developed a keen interest in cloud technologies and DevOps, focusing on scalable and automated solutions. I enjoy turning challenges into opportunities and continuously aim to level up my skills.</p>
   </section>
 
   <section class="tech-stack" data-aos="fade-up" data-aos-delay="1200">
