--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Harshad | Software Engineer</title>
   
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/devicon/devicon.min.css" />
   
@@ -14,29 +13,28 @@
 </head>
 <body>
   <header>
-  <nav>
-    <h1>Portfolio</h1>
+    <nav>
+      <h1>Portfolio</h1>
 
-    <!-- Desktop Navigation -->
-    <ul class="nav-links">
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#tech-stack">Tech Stack</a></li>
-      <li><a href="#projects">Projects</a></li>
-    </ul>
+      <!-- Desktop Navigation -->
+      <ul class="nav-links">
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#tech-stack">Tech Stack</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
 
-    <!-- Mobile Menu Toggle -->
-    <div class="mobile-menu">
-      <input type="checkbox" id="menu-toggle" />
-      <label for="menu-toggle" class="menu-icon">&#9776;</label>
-      <div class="dropdown">
-        <a href="#about">About Me</a>
-        <a href="#tech-stack">Tech Stack</a>
-        <a href="#projects">Projects</a>
+      <!-- Mobile Menu Toggle -->
+      <div class="mobile-menu">
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <div class="dropdown">
+          <a href="#about">About Me</a>
+          <a href="#tech-stack">Tech Stack</a>
+          <a href="#projects">Projects</a>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
-
+    </nav>
+  </header>
 
   <section class="hero" data-aos="fade-up">
     <img src="assets/harshad.jpg" alt="Harshad Profile" class="profile-img" data-aos="zoom-in" data-aos-delay="200" />
@@ -46,17 +44,16 @@
     <a href="https://github.com/Harshad03-GN/Harshad03-GN/blob/main/Resume.pdf" class="btn" data-aos="zoom-in" data-aos-delay="800" target="_blank" rel="noopener noreferrer">Download Resume</a>
   </section>
 
-  <section class="about" data-aos="fade-up" data-aos-delay="1000">
+  <section id="about" class="about" data-aos="fade-up" data-aos-delay="1000">
     <h2>About Me</h2>
-    <p>I’m a motivated and hardworking individual who thrives on learning and growth. With a passion for building and problem-solving, I’ve  developed a keen interest in cloud technologies and DevOps, focusing on scalable and automated solutions. I enjoy turning challenges into opportunities and continuously aim to level up my skills.</p>
+    <p>I’m a motivated and hardworking individual who thrives on learning and growth. With a passion for building and problem-solving, I’ve developed a keen interest in cloud technologies and DevOps, focusing on scalable and automated solutions. I enjoy turning challenges into opportunities and continuously aim to level up my skills.</p>
   </section>
 
-  <section class="tech-stack" data-aos="fade-up" data-aos-delay="1200">
+  <section id="tech-stack" class="tech-stack" data-aos="fade-up" data-aos-delay="1200">
     <h2>Tech Stack</h2>
     <div class="icons">
-    <i class="devicon-python-plain colored"></i>
-     <i class="devicon-amazonwebservices-plain colored"></i> 
-
+      <i class="devicon-python-plain colored"></i>
+      <i class="devicon-amazonwebservices-plain colored"></i> 
       <i class="devicon-azure-plain colored"></i>
       <i class="devicon-docker-plain colored"></i>
       <i class="devicon-github-original colored"></i>
@@ -65,7 +62,7 @@
     </div>
   </section>
 
-  <section class="projects" data-aos="fade-up" data-aos-delay="1400">
+  <section id="projects" class="projects" data-aos="fade-up" data-aos-delay="1400">
     <h2>Projects</h2>
     <div class="project-card">
       <h3>Image Resizer with Azure</h3>
@@ -88,24 +85,32 @@
   </script>
 
   <script src="script.js"></script>
+
   <script>
-  let lastScrollTop = 0;
-  const header = document.querySelector("header");
+    // Sticky header hide/show on scroll
+    let lastScrollTop = 0;
+    const header = document.querySelector("header");
 
-  window.addEventListener("scroll", () => {
-    let currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+    window.addEventListener("scroll", () => {
+      let currentScroll = window.pageYOffset || document.documentElement.scrollTop;
 
-    if (currentScroll > lastScrollTop) {
-      // Scrolling down
-      header.style.transform = "translateY(-100%)";
-    } else {
-      // Scrolling up
-      header.style.transform = "translateY(0)";
-    }
+      if (currentScroll > lastScrollTop) {
+        // Scrolling down
+        header.style.transform = "translateY(-100%)";
+      } else {
+        // Scrolling up
+        header.style.transform = "translateY(0)";
+      }
 
-    lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
-  });
-</script>
+      lastScrollTop = currentScroll <= 0 ? 0 : currentScroll;
+    });
 
+    // Close mobile menu after clicking a dropdown link
+    document.querySelectorAll('.dropdown a').forEach(link => {
+      link.addEventListener('click', () => {
+        document.getElementById('menu-toggle').checked = false;
+      });
+    });
+  </script>
 </body>
 </html>
