--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <section id="about" class="about" data-aos="fade-up" data-aos-delay="1000">
     <h2>About Me</h2>
-    <p>I’m a motivated and hardworking individual who thrives on learning and growth. With a passion for building and problem-solving, I’ve developed a keen interest in cloud technologies and DevOps, focusing on scalable and automated solutions. I enjoy turning challenges into opportunities and continuously aim to level up my skills.</p>
+    <p>I’m a motivated and hardworking individual who thrives on learning and growth. With a passion for building and problem-solving, I’ve developed a keen interest in Cloud technologies and DevOps, focusing on scalable and automated solutions. I enjoy turning challenges into opportunities and continuously aim to level up my skills.</p>
   </section>
 
   <section id="tech-stack" class="tech-stack" data-aos="fade-up" data-aos-delay="1200">
@@ -112,5 +112,25 @@
       });
     });
   </script>
+  <footer>
+  <h2 class="footer-heading">Contact Me</h2>
+
+  <div class="footer-content">
+    <div class="footer-left">
+        <p>Mobile: +91 8951071289</p>
+      
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/harshad-naik-527819249" target="_blank">Harshad-Naik</a></p>
+    </div>
+
+    <div class="footer-right">
+      <p>Email: <a href="mailto:nharshad26@outloo.com">nharshad26@outloo.com</a></p>
+      <p>GitHub: <a href="https://github.com/Harshad03-GN" target="_blank">Harshad03-GN</a></p>
+    </div>
+  </div>
+
+  <p class="footer-bottom">&copy; 2025 Harshad. All rights reserved.</p>
+</footer>
+
+
 </body>
 </html>
