--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
     <h1 data-aos="fade-right" data-aos-delay="400">Hi, I'm Harshad.</h1>
 
     <p data-aos="fade-left" data-aos-delay="600">Software Engineer | Cloud Enthusiast | DevOps</p>
-    <a href="https://github.com/Harshad03-GN/Harshad_Portfolio/blob/main/resume.pdf" class="btn" data-aos="zoom-in" data-aos-delay="800" target="_blank" rel="noopener noreferrer">View Resume</a>
+    <a href="https://github.com/Harshad03-GN/Harshad_Portfolio/raw/main/resume.pdf"
+   class="btn"
+   data-aos="zoom-in"
+   data-aos-delay="800"
+   download="Harshad_Resume.pdf">
+   Download Resume
+</a>
+
   </section>
 
   <section id="about" class="about" data-aos="fade-up" data-aos-delay="1000">
