--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    data-aos="zoom-in"
    data-aos-delay="800"
    download="Harshad_Resume.pdf">
-   Download Resume
+   view Resume
 </a>
 
   </section>
