--- a/index.html
+++ b/index.html
@@ -72,9 +72,14 @@
   <section id="projects" class="projects" data-aos="fade-up" data-aos-delay="1400">
     <h2>Projects</h2>
     <div class="project-card">
+      <h3>Real-Time Weather Monitoring Dashboard with Alerts</h3>
+      <p>A Flask-based weather monitoring web application that fetches real-time weather data using the OpenWeatherMap API, displays it via a user-friendly interface, stores history in Azure Blob Storage, and enables users to view past weather records. Deployed and monitored via Azure Cloud.</p>
+      <a href="https://github.com/Harshad03-GN/ImageResizerProject" target="_blank" rel="noopener noreferrer">View GitHub</a>
+    </div>
+    <div class="project-card">
       <h3>Image Resizer with Azure</h3>
       <p>Python app to resize images and store them on Azure Blob Storage. Integrated with GitHub Actions for CI.</p>
-      <a href="https://github.com/Harshad03-GN/ImageResizerProject" target="_blank" rel="noopener noreferrer">View GitHub</a>
+      <a href="https://github.com/Harshad03-GN/Weather-Monitoring" target="_blank" rel="noopener noreferrer">View GitHub</a>
     </div>
     <div class="project-card">
       <h3>CI/CD for Flask App</h3>
